Fixed some spacing and font issues

--- a/src/Components/Menu/MenuSection/MenuSection.css
+++ b/src/Components/Menu/MenuSection/MenuSection.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding-left: 10px;
     padding-top: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 15px;
 }
 
 .SmoothiesContainer {
