--- a/src/Components/Menu/Smoothie/Smoothie.css
+++ b/src/Components/Menu/Smoothie/Smoothie.css
@@ -1,4 +1,5 @@
 .Smoothie {
+    font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     width: 44%;
     margin-right: 20px;
     margin-bottom: 20px;
@@ -43,13 +44,13 @@
 .Smoothie h3 {
     margin-top: 5px;
     margin-bottom: 12px;
-    font-size: 23px;
+    font-size: 20px;
     font-weight: bold;
 }
 
 .Smoothie h4 {
     color:rgb(65, 65, 65) !important;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .truncate-overflow {
@@ -60,7 +61,7 @@
 }
 
 .prices {
-    font-size: 20px;
+    font-size: 17px;
     color: rgb(65, 65, 65);
     font-weight: bold;
     text-align: left;
